--- a/style.css
+++ b/style.css
@@ -7,25 +7,77 @@
 :root{
     --cor-de-fundo: #050544  ;
     --cor-de-fundo-links:   rgb(33, 17, 172)  ;
-    --cor-de-texto-links: #fff   ;
-    --filtro-lampada: grayscale (1) opacity(0.25);
+    --cor-de-texto-links: #fff;
+
+    --surface-color:#ffffff0d;
+    --surface-color-hover:#00000005;
+    --highlight-color:#ffffff33;
+    --switch-bg-url:url(./assets/moon-stars.svg);
+    --bg-url: url(./assets/bg-mobile.jpg);
+    --stroke-color:#ffffff80;
 }
 .tema-claro{
     --cor-de-fundo: #434eee;
     --cor-de-fundo-links: #fff;
     --cor-de-fundo-links: #434eee;
-    --filtro-lampada: grayscale (1) opacity(1);
+    --switch-bg-url: rgb(99, 12, 158);
+
+    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --stroke-color: #00000080;
+    --surface-color: rgba(0, 0, 0, 0, 0.05);
+    --surface-color-hover:#00000005;
+    --highlight-color:#0000001a;
+    --switch-bg-url: url(./assets/sun.svg);
 }
 
-.botao-lampada{
-    margin-top: 15px;
-    margin-left: 50%;
-    width: 40px;
-    padding: 60;
-    border-radius: 99px;
-    cursor: pointer;
-    filter: var(--filtro-lampada);
+.topo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
 }
+
+/* botao-switch */
+
+#botao-switch {
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+}
+#botao-switch button {
+    width: 25px;
+    height: 25px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+    
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+
+    animation: slide-back .6s;
+}
+
+.light #botao-switch button {
+    animation:slide-in 0.6s forwards;
+
+}
+#botao-switch button:hover {
+    outline: 8px solid var(--highlight-color);
+}
+#botao-switch span{
+    display: block;
+    width: 44px;
+    height: 15px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}    
 
 .foto-perfil{
     width: 80px;
@@ -51,17 +103,9 @@ body{
     font-family: "Barlow, sans-serif";
 }
 
-/* .secao-principal{
+.secao-principal{
     max-width: 1024px;
     margin: 0 auto;
-} */
-
-.topo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #fff;
 }
 
 /* LINKS */
@@ -97,7 +141,7 @@ body{
 .box-links__icon{
     position: absolute;
     left: 15px;
-    font-size: 55px;
+    font-size: 30px;
 }
 a:hover{
     filter: brightness(0.75);
