--- a/style.css
+++ b/style.css
@@ -6,28 +6,26 @@
 
 :root{
     --cor-de-fundo: #050544  ;
-    --cor-de-fundo-links:   rgb(33, 17, 172)  ;
-    --cor-de-texto-links: #fff;
+    --cor-de-fundo-links: #2111ac;
+    --cor-de-texto-links: #ffffff;
 
     --surface-color:#ffffff0d;
     --surface-color-hover:#00000005;
     --highlight-color:#ffffff33;
     --switch-bg-url:url(./assets/moon-stars.svg);
-    --bg-url: url(./assets/bg-mobile.jpg);
-    --stroke-color:#ffffff80;
+    
 }
 .tema-claro{
-    --cor-de-fundo: #434eee;
-    --cor-de-fundo-links: #fff;
-    --cor-de-fundo-links: #434eee;
-    --switch-bg-url: rgb(99, 12, 158);
-
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --cor-de-fundo: #60638b;
+    --cor-de-fundo-links: #ffffff;
+    --cor-de-texto-links: #60638b;
+    
     --stroke-color: #00000080;
     --surface-color: rgba(0, 0, 0, 0, 0.05);
     --surface-color-hover:#00000005;
     --highlight-color:#0000001a;
     --switch-bg-url: url(./assets/sun.svg);
+   
 }
 
 .topo{
@@ -61,9 +59,8 @@
     animation: slide-back .6s;
 }
 
-.light #botao-switch button {
-    animation:slide-in 0.6s forwards;
-
+ #botao-switch button {
+    --animation:slide-in 0.6s forwards;
 }
 #botao-switch button:hover {
     outline: 8px solid var(--highlight-color);
@@ -93,14 +90,15 @@
 
 .tecnologias{
     font-weight: lighter;
+    font-size: 14px;
     margin-top: 7px;
-    margin-bottom: 15px;
+    margin-bottom: 17px;
 }
 
 body{
     background: var(--cor-de-fundo);
     -webkit-font-smoothing: antialiased;
-    font-family: "Barlow, sans-serif";
+    font-family: "Barlow";
 }
 
 .secao-principal{
@@ -126,11 +124,12 @@ body{
     position: relative;         /* Deixa os icones com a distancia em relação aos links */
 
     margin-top: 5px;
-    padding: 10px; 
+    padding: 8px; 
     width: 20%;
     height: 30px;
     border-radius: 4%;
-    
+    font-family: "Barlow";
+    font-size: 17px;
     background: var(--cor-de-fundo-links); 
     color: var(--cor-de-texto-links);
     
@@ -140,8 +139,8 @@ body{
 
 .box-links__icon{
     position: absolute;
-    left: 15px;
-    font-size: 30px;
+    left: 10px;
+    font-size: 25px;
 }
 a:hover{
     filter: brightness(0.75);
@@ -153,7 +152,7 @@ a:hover{
     display: flex;
     justify-content: center;
     color: #ffffff;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: lighter;
     margin-top: 15px;
     margin-bottom: 5px;
@@ -163,7 +162,7 @@ a:hover{
     display: flex;
     justify-content: center;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 10px;
 }
 
@@ -173,23 +172,13 @@ a:hover{
     align-items: center;
     margin-bottom: 50px;
     color: #ffffff;
-    font-size: 30px;
-}
-
-.rodape__p3{
-    display: flex;
-    justify-content: center;
-    color: #ffffff;
-    font-size: 12px;
+    font-size: 28px;
 }
 
 /* MEDIA QUERY */
 
 @media(max-width: 1900px){
-    .botao-lampada{
-        margin-top: 15px;
-        margin-left: 7%;
-    }
+
     .foto-perfil{
         width: 10%;
         margin-top: 10px;
@@ -214,10 +203,6 @@ a:hover{
 }
 
 @media(max-width: 800px){
-    .botao-lampada{
-        margin-top: 15px;
-        margin-left: 7%;
-    }
     .foto-perfil{
         width: 15%;
         margin-top: 15px;
@@ -237,38 +222,42 @@ a:hover{
 }
 
 @media(max-width: 400px){
-    .botao-lampada{
-        margin-top: 15px;
-        margin-left: -20%;
-    }
     .foto-perfil{
-        width: 20%;
+        width: 17%;
     }
 
     .nome{
         font-size: 17px;
     }
 
+    #botao-switch button{
+        width: 19px;
+        height: 19px;
+    }
+
+    #botao-switch span{
+        width: 40px;
+        height: 12px;
+    }
+
     .tecnologias{
         font-size: 10px;
-        margin-bottom: 2px;
+        margin-bottom: 7px;
     }
 
-    .box-links{
-        display: flex;
-        align-items: center;
-        justify-items: center;
-        margin-top: 1px;
-        margin-bottom: 5px;
+    .links{
+        font-size: 17px;
+        padding: 7px;
+        margin-top: 10px;
+        width: 50%;
     }
 
-    a{
-       font-weight: 150;
-        margin-top: 5px;
-        padding: 3px; 
-        font-size: 12px;
-        text-align: center;
+    .box-links__icon{
+        position: absolute;
+        left: 10px;
+        font-size: 15px;
     }
+
     
     .rodape__p1{
         margin-top: 10px;
