--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
     --cor-de-fundo-links: #2111ac;
     --cor-de-texto-links: #ffffff;
     
-    /* --stroke-color: #fff;
-    --surface-color-hover:#f8f5f5ee; */
     --stroke-color:rgba(255, 255, 255, 0.5);
     --surface-color:rgba(255, 255, 255, 0.05);
     --surface-color-hover:rgba(0, 0, 0, 0.02);
@@ -22,97 +20,13 @@
     --cor-de-fundo: #60638b;
     --cor-de-fundo-links: #ffffff;
     --cor-de-texto-links: #60638b;
-    
-    /* --stroke-color: #00000080;
-    --surface-color-hover:#00000005; */
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color:rgba(0, 0, 0, 0, 0.05);
     --surface-color-hover:rgba(0, 0, 0, 0.02);
     --highlight-color:#0000001a;
     --switch-bg-url: url(./assets/sun.svg);
    
-}
-
-.topo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #fff;
-}
-
-/* botao-switch */
-
-#switch {
-    width: 64px;
-    margin: 4px auto;
-    position: relative;
-}
-#switch button {
-    width: 25px;
-    height: 25px;
-    background: white var(--switch-bg-url) no-repeat center;
-    border: 0;
-    border-radius: 50%;
-    
-    position: absolute;
-    top: 50%;
-    left: 0;
-    z-index: 10;
-    transform: translateY(-50%);
-    cursor: pointer;
-    animation: slide-back .6s;
-}
-#switch:active{
-    transition: .4s;
-    transform: translateX(26px);
-}
-
-#switch:focus #slide {
-    box-shadow: 0 0 1px #2196F3;
-}
-
-#switch button:hover {
-    outline: 8px solid var(--highlight-color);
-}
-#switch input {
-    display: none;
-}
-
-
-#switch span{
-    
-    display: block;
-    width: 50px;
-    height: 15px;
-    background: var(--surface-color);
-    border: 1px solid var(--stroke-color);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 9999px;
-}    
-
-
-
-
-.foto-perfil{
-    width: 80px;
-    border-radius: 9999px;
-    border: solid #ffffff 1.5px;
-    box-shadow: #181818 0 2px 10px;
-}
-
-.nome{
-    margin-top: 10px;
-    margin-bottom: 7px;
-}
-
-.tecnologias{
-    font-weight: lighter;
-    font-size: 14px;
-    margin-top: 7px;
-    margin-bottom: 17px;
 }
 
 body{
@@ -122,11 +36,89 @@ body{
     transition: 0.3s;
 }
 
-.secao-principal{
-    max-width: 1024px;
-    margin: 0 auto;
+.topo{
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Barlow";
+    color: #fff;
 }
 
+.topo .foto-perfil{
+    width: 80px;
+    border-radius: 9999px;
+    border: solid #ffffff 1.5px;
+    box-shadow: #181818 0 2px 10px;
+}
+
+.topo .nome{
+    margin-top: 10px;
+    margin-bottom: 7px;
+}
+
+.topo .tecnologias{
+    font-weight: lighter;
+    font-size: 14px;
+    margin-top: 7px;
+    margin-bottom: 17px;
+}
+
+ /* BOTAO-SWITCH */ 
+  #switch {
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+  }
+  #switch button {
+    width: 32px;
+    height: 32px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background: white var(--switch-bg-url) no-repeat center;
+  
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+    animation: slide-back 0.6s;
+    cursor: pointer;
+  }
+  
+  .tema-claro #switch button {
+    animation: slide-in 0.6s forwards;
+  }
+  
+  #switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    border: 1px solid black;
+    border-radius: 99px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  
+  @keyframes slide-in {
+    from {
+      left: 0;
+    }
+    to {
+      left: 50%;
+    }
+  }
+  
+  @keyframes slide-back {
+    from {
+      left: 50%;
+    }
+    to {
+      left: 0;
+    }
+  }
+
+  
 /* LINKS */
 
 .box-links{
@@ -199,26 +191,27 @@ a:hover{
 /* Scroll Bar */
 ::-webkit-scrollbar {
     width: 15px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #050544; 
-    border-radius: 7px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px #050544; 
+border-radius: 7px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #050544; 
     border-radius: 7px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
     background: #310891; 
-  }
+    }
 
-/* MEDIA QUERY */
+
+    /* MEDIA QUERY */
 
 @media(max-width: 1900px){
 
