--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ border-radius: 7px;
         margin-top: 15px;
     }
     a{
-        padding: 15px; 
+        padding: 25px; 
     }
     .rodape__p1{
         font-size: 11px ;
@@ -255,9 +255,18 @@ border-radius: 7px;
     .rodape__p3{
         font-size: 7px;
     }
+   
 }
+@media(max-width: 600px){
+    .links{
+        font-size: 17px;
+        padding: 7px;
+        margin-top: 10px;
+        width: 30%;
+    }
 
-@media(max-width: 400px){
+}
+@media(max-width: 450px){
     .foto-perfil{
         width: 17%;
     }
@@ -275,7 +284,7 @@ border-radius: 7px;
         width: 40px;
         height: 12px;
     }
-
+  
     .tecnologias{
         font-size: 10px;
         margin-bottom: 7px;
@@ -285,7 +294,7 @@ border-radius: 7px;
         font-size: 17px;
         padding: 7px;
         margin-top: 10px;
-        width: 50%;
+        width: 40%;
     }
 
     .box-links__icon{
@@ -314,4 +323,5 @@ border-radius: 7px;
         margin-top: auto;
         font-size: 10px;
     }
-}    
+}  
+
